dnl
dnl Process this file with autoconf to produce a configure script.
dnl $Revision: 1.5 $  $Date: 2004/03/18 17:05:12 $
dnl
dnl
dnl  All binaries and repositories should go on the root filesystem
dnl  to be sure the system will work in case some other filesystem (i.e.
dnl  /usr will get broken.  See CFGS_VALUES_ROOT_DIR and others below.  
dnl

AC_INIT(lincs/cfgs/cfgs_config.h)

AM_INIT_AUTOMAKE(LinCS, 0.2)

VERSION_MAJOR=`echo $VERSION | sed 's/^\([[0-9]][[0-9]]*\)\..*\$/\1/'`
VERSION_MINOR=`echo $VERSION | sed 's/^[[0-9]][[0-9]]*\.\([[0-9]][[0-9]]*\).*\$/\1/'`
AC_DEFINE_UNQUOTED(VERSION_MAJOR, $VERSION_MAJOR, [major version number])
AC_DEFINE_UNQUOTED(VERSION_MINOR, $VERSION_MINOR, [minor version number])
AC_SUBST(VERSION)
AC_SUBST(VERSION_MAJOR)
AC_SUBST(VERSION_MINOR)


dnl Automake problems with endif.  This allows for conditionals in Makefile.am
dnl but it is Gnu not portable Makefile. 
ENDIF=endif
AC_SUBST(ENDIF)


dnl   AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE
AC_EXEEXT


dnl  Checks for programs.
AC_PROG_MAKE_SET
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S


dnl  Setup ltdl.
AC_LIBTOOL_DLOPEN
AC_LIBLTDL_CONVENIENCE
AC_PROG_LIBTOOL
AC_SUBST(LIBLTDL)
AC_SUBST(INCLTDL)
AC_CONFIG_SUBDIRS(libltdl)
AC_CONFIG_SUBDIRS(expat)


dnl  Checks for libraries.


dnl  Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)


dnl  Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_CHECK_TYPE(pid_t, int)
AC_CHECK_TYPE(off_t, long)
AC_TYPE_SIZE_T
AC_STRUCT_TM


dnl  Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(getcwd strerror)


dnl __DEBUG_MACRO__
dnl set -x -v 
cs_prefix="$prefix"
test "x$cs_prefix" = xNONE && cs_prefix="$ac_default_prefix"
AC_DEFINE_DIR(CFGS_VALUES_ROOT_DIR, cs_prefix/entries, [folder where values' repositories are stored])
AC_DEFINE_DIR(CFGS_MOD_PATH,        cs_prefix/lib,     [folder where backend modules are stored])
AC_DEFINE_DIR(CFGS_BIN_PATH,        cs_prefix/bin,     [folder where executables are stored])
AC_DEFINE_DIR(CSFG_PREFIX_PATH,     cs_prefix,         [root folder of the installation])
AC_DEFINE_DIR(CFGST_LOGFILE_DIR,    "/tmp",            [folder where logfiles are stored])
dnl set +x +v 
dnl __DEBUG_MACRO__


AM_WITH_DMALLOC


dnl  Creating files
AC_OUTPUT(Makefile lincs/Makefile)
AC_OUTPUT(lincs/lib_cfgs_tools/Makefile)
AC_OUTPUT(lincs/backends/Makefile)
AC_OUTPUT(lincs/backends/cfgs_fs_bk/Makefile  lincs/backends/cfgs_stacker/Makefile)
AC_OUTPUT(lincs/clients/Makefile)
AC_OUTPUT(lincs/clients/cfgs_info/Makefile   lincs/clients/cfgs_cat/Makefile)
AC_OUTPUT(lincs/clients/cfgs_tool/Makefile)
AC_OUTPUT(lincs/daemon/Makefile)
AC_OUTPUT(lincs/lib_cfgs_client/Makefile)
AC_OUTPUT(lincs/lib_cfgs_emul/Makefile)
AC_OUTPUT(tests/Makefile)
AC_OUTPUT(doc/Makefile)


dnl We need to install a copy of config.h while leaving config.h around 
cp config.h lincs/cfgs/cfgs_hostcfg.h

dnl Configure test harness
echo "export CFGSINSTALL=""'""$prefix""'" > tests/tests.config

